[v0.13 - 05/feb/19] > 5.2 > Search form, GET requests & Carousel small fix
- Add search box to locate similar entries.
- Style search box with bootstrap classes.
- Redirect to product list row anchor when submitting search.
- Fix carousel controls height to avoid overlap over divs below.

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -5,6 +5,11 @@ body{
   overflow-x: hidden;
 }
 
+.container-fluid{
+  padding-left: 0;
+  padding-right: 0;
+}
+
 /*  MENU  */
 #menu{
   min-height: 8vh;
